Rapid Prd/src/objects/Marble__c.object
<CustomObject>
    <fields>
        <fullName>Lendr__c</fullName>
        <formula>IF( 
OR(

OR(
State_of_Operation__c = &apos;HI&apos;
, State_of_Operation__c = &apos;AK&apos;
)

, FICO_Score__c &lt; 520

/* uncomment if necessary 
, Credit_Inquiries_Last_90_Days__c &gt; 15 
*/

, QC_Monthly_Sales__c &lt; 10000
, Ave_Number_of_Deposits_per_Month__c &lt; 7 
, Average_Monthly_Negative_Balance__c &gt; 2
, Average_Balancce__c &lt; 0
, Current_Bank_Balance__c &lt; 0
, ispickval(Citizenship_Status__c,&apos;Visa&apos;)
, ispickval(Citizenship_Status__c,&apos;Green Card&apos;) 
, Business_Open_Date__c &gt; (today() - (30*12)) 
, Industry__r.Lendr__c = TRUE
, Last_Funded_Date__c &gt; (Today() - (30*1))

/* uncomment if necessary 
, ispickval(Entity_Type__c,&apos;Non-Profit&apos;) 
*/

/*
, Soft_Pull_Only__c = TRUE 
*/
, MCA_Only__c = TRUE

,
AND(
  ispickval(Home_Based__c,&apos;Yes&apos;)
,Business_Open_Date__c &gt; (today() - (30*36)) 
)

,
AND( 
Bankruptcy__c = TRUE
,OR( Bankruptcy_Discharge_Date__c &gt; (today()-(30*12))
,ISNULL(Bankruptcy_Discharge_Date__c)
)
)

, 
AND( 
Tax_Liens__c = FALSE
, Tax_Lien_Balance__c &gt; 0 
) 
, 
AND( 
Tax_Liens__c = TRUE
, Tax_Lien_Balance__c &lt; 0 
) 
, 
        AND(
              Industry__r.Name = &apos;Trucking&apos; 
            , Business_Open_Date__c &gt; (today() - (30*36))
        )
      ,
        AND(
              Industry__r.Name = &apos;Construction&apos; 
            , Business_Open_Date__c &gt; (today() - (30*36))
        )
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 1 /*Deepest Position*/
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 2 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 75000 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0.6 /*Balance Net %*/
              )
          )

) 
, &quot;&quot; 
, IF(  ispickval(Decline_Reason__c,&quot;Qualified at Rapid&quot;) ,&quot;||OVERQUALIFIED||&quot;
, &quot;LENDR APPROVED&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lendr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Levy_Associates__c</fullName>
        <formula>IF(
   OR(  
        Tax_Lien_Balance__c &lt; 20000
      , Business_Open_Date__c &gt; (Today() - (30*6))
      ,  Industry__r.Levy_Associates__c  = TRUE 
      , Average_Balancce__c &lt; 5000
      ,
       AND( 
            Bankruptcy__c = TRUE
           , OR( Bankruptcy_Discharge_Date__c &gt; (today()-(1))
                ,ISNULL(Bankruptcy_Discharge_Date__c)
               )
           )

)
, &quot;&quot;
, &quot;LEVY &amp; ASSOCIATES APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Levy &amp; Associates</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Libertas_Contract_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Libertas Contract Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Libertas_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Libertas Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Libertas_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Libertas Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Libertas_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Libertas Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Libertas__c</fullName>
        <formula>IF( 
OR(

/* uncomment if necessary
State_of_Operation__c = &apos;HI&apos;
*/

FICO_Score__c &lt; 500

/* uncomment if necessary 
, Credit_Inquiries_Last_90_Days__c &gt; 15 
*/

, QC_Monthly_Sales__c &lt; 12500
, Ave_Number_of_Deposits_per_Month__c &lt; 5 
, Average_Monthly_Negative_Balance__c &gt; 4  
, Business_Open_Date__c &gt; (today() - (30*6))  
, Industry__r.Libertas__c = TRUE 
, Average_Balancce__c &lt; 0

/* uncomment if necessary 
, ispickval(Entity_Type__c,&apos;Non-Profit&apos;) 
*/

/* uncomment if necessary
, Soft_Pull_Only__c = TRUE 
*/
, MCA_Only__c = TRUE

,
AND( 
Bankruptcy__c = TRUE
,OR( Bankruptcy_Discharge_Date__c &gt; (today()-(30*6))
,ISNULL(Bankruptcy_Discharge_Date__c)
)
)

, 
AND( 
Tax_Liens__c = FALSE
, Tax_Lien_Balance__c &gt; 0 
) 
, 
AND( 
Tax_Liens__c = TRUE
, Tax_Lien_Balance__c &gt; 120000 
) 
,
        AND(
              Industry__r.Name = &apos;Trucking&apos; 
            , QC_Monthly_Sales__c &lt; 30000
            , Business_Open_Date__c &gt; (today() - (30*12))
        )
      ,
        AND(
              Industry__r.Name = &apos;Construction&apos; 
             ,Ave_Number_of_Deposits_per_Month__c &lt; 13
        )
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 3 /*Deepest Position*/  
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 2 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 75000 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0.5 /*Balance Net %*/
              )
          )
      ,
       /*Max Rev Take for Subordinated Positions*/ 
       IF(
           AND(
                 Sum_of_Competitor_Balances__c &gt; 0
               , Position__c &gt; 1
              )
          ,(Sum_of_Competitor_Balances__c / 10)/ QC_Monthly_Sales__c &gt; 0.2 /*Max Rev Take*/
          , FALSE
         )     

) 
, &quot;&quot;
, IF(  ispickval(Decline_Reason__c,&quot;Qualified at Rapid&quot;) ,&quot;||OVERQUALIFIED||&quot;
, &quot;||PAUSED|| - LIBERTAS APPROVED&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Libertas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAC_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MAC Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MAC_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MAC Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MAC_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MAC Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCA_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MCA Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marble_Rejection_Reason__c</fullName>
        <description>Picklist for reject reason (requested by Zach Flood 10/25/2017)</description>
        <label>Marble Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Industry,</fullName>
                </value>
                <value>
                    <fullName>Monthly Sales,</fullName>
                </value>
                <value>
                    <fullName>Average Daily Balance,</fullName>
                </value>
                <value>
                    <fullName>Negative Days,</fullName>
                </value>
                <value>
                    <fullName>Deposits Per Month,</fullName>
                </value>
                <value>
                    <fullName>Number of Competitor Balances,</fullName>
                </value>
                <value>
                    <fullName>RapidAdvance Balance,</fullName>
                </value>
                <value>
                    <fullName>Home Based,</fullName>
                </value>
                <value>
                    <fullName>Decline Reason,</fullName>
                </value>
                <value>
                    <fullName>Application Data,</fullName>
                </value>
                <value>
                    <fullName>Oops,</fullName>
                </value>
                <value>
                    <fullName>Missing Folder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NAICSSIC__c</fullName>
        <inlineHelpText>Need Help, go here: https://www.naics.com/search/</inlineHelpText>
        <label>NAICS / SIC CODE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Description__c</fullName>
        <description>What is the industry description</description>
        <label>NAICS Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National__c</fullName>
        <formula>IF(
   OR(  /* uncomment if necessary
        State_of_Operation__c = &apos;WV&apos;
        */
        FICO_Score__c &lt; 525
        /* uncomment if necessary
      , Credit_Inquiries_Last_90_Days__c &gt; 20
        */
      , QC_Monthly_Sales__c &lt; 12500
        /* uncomment if necessary
      , Ave_Number_of_Deposits_per_Month__c &lt; 3
        */
      , Average_Monthly_Negative_Balance__c &gt; 3
      , Business_Open_Date__c &gt; (today() - (30*12))
      , Industry__r.National_Funding__c = TRUE
      , Average_Balancce__c &lt; 1500
        /* uncomment if necessary
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
        */
        /* uncomment if necessary
      , Soft_Pull_Only__c = TRUE
        */
      ,  MCA_Only__c = TRUE
      ,
       AND( 
            Bankruptcy__c = TRUE
           , OR( Bankruptcy_Discharge_Date__c &gt; (today()-(30*12))
                ,ISNULL(Bankruptcy_Discharge_Date__c)
               )
           )
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; 175000
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )
      ,
        AND(
              Industry__r.Name = &apos;Trucking&apos; 
            , QC_Monthly_Sales__c &lt; 50000
            , FICO_Score__c &lt; 650
        )
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 1 /*Deepest Position*/
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 1 /*Max # of Payoffs*/
                 /* uncomment if necessary
               , Sum_of_Competitor_Balances__c &gt; 150000 
                 */
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0.8 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, &quot;NATIONAL APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Daily_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Daily Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Competitor_Balances__c</fullName>
        <label>Number of Competitor Balances</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpID__c</fullName>
        <formula>Opportunity_Reference__r.Lead_ID_Opp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Marbles</relationshipLabel>
        <relationshipName>Marbles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Submission_Complete__c</fullName>
        <label>Partner Submission Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <defaultValue>&quot;//fs5/office/Broker_Out_Documents/&quot;</defaultValue>
        <label>Path</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Platinum_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Platinum Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platinum_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Platinum Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platinum_Rapid__c</fullName>
        <formula>IF(
   OR(  
        State_of_Operation__c = &apos;AK&apos;
      , State_of_Operation__c = &apos;HI&apos;
      , FICO_Score__c &lt; 550
/*
      , Credit_Inquiries_Last_90_Days__c &gt; 20
*/
      , QC_Monthly_Sales__c &lt; 10000
      , Ave_Number_of_Deposits_per_Month__c &lt; 5
      , Average_Monthly_Negative_Balance__c &gt; 4
      , Business_Open_Date__c &gt; (Today() - (30*12))
      , Industry__r.Platinum_Rapid__c = TRUE 
      , Average_Balancce__c &lt; 1000
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
      , Soft_Pull_Only__c = TRUE
      ,
       AND( 
            Bankruptcy__c = TRUE
           , OR( Bankruptcy_Discharge_Date__c &gt; (today()-(30*12))
                ,ISNULL(Bankruptcy_Discharge_Date__c)
               )
           )
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; 10000
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )
      ,
        AND(
              Industry__r.Name = &apos;Trucking&apos; 
            , Business_Open_Date__c &gt; (today() - (30*36))
        )
      ,
       /*Max Rev Take for Subordinated Positions*/ 
       IF(
           AND(
                 Sum_of_Competitor_Balances__c &gt; 0
               , Position__c &gt; 1
              )
          ,(Sum_of_Competitor_Balances__c / 10)/ QC_Monthly_Sales__c &gt; 0.25 /*Max Rev Take*/
          , FALSE
         ) 
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 3 /*Deepest Position*/
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 1 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 150000 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0.5 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, IF(  ispickval(Decline_Reason__c,&quot;Qualified at Rapid&quot;) ,&quot;||OVERQUALIFIED||&quot;
, &quot;||PAUSED|| - PLATINUM RAPID APPROVED&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Platinum Rapid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platinum_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Platinum Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Principis_Capital__c</fullName>
        <formula>IF( 
OR(

/* uncomment if necessary
State_of_Operation__c = &apos;HI&apos;
*/

/* uncomment if necessary
FICO_Score__c &lt; 500
*/

/* uncomment if necessary 
, Credit_Inquiries_Last_90_Days__c &gt; 15 
*/

  QC_Monthly_Sales__c &lt; 10000
, Ave_Number_of_Deposits_per_Month__c &lt; 7 
, Average_Monthly_Negative_Balance__c &gt; 5  
, Business_Open_Date__c &gt; (today() - (30*12))  
, Industry__r.Principis_Capital__c = TRUE
, RapidAdvance_Balance__c = TRUE 
, MCA_Only__c = TRUE

/* uncomment if necessary
, Average_Balancce__c &lt; 0
, Current_Bank_Balance__c &lt; 0
, ispickval(Citizenship_Status__c,&apos;Visa&apos;) 
*/

, ispickval(Entity_Type__c,&apos;Non-Profit&apos;) 

, Soft_Pull_Only__c = TRUE 

/*uncomment
,
AND(
 ispickval(Home_Based__c,&apos;Yes&apos;)
,Industry__r.Name = &apos;Construction&apos;
)
*/

,
AND( 
Bankruptcy__c = TRUE
,OR( Bankruptcy_Discharge_Date__c &gt; (today()-(30*12))
,ISNULL(Bankruptcy_Discharge_Date__c)
)
)

, 
AND( 
Tax_Liens__c = FALSE
, Tax_Lien_Balance__c &gt; (3 * QC_Monthly_Sales__c) 
) 
, 
AND( 
Tax_Liens__c = TRUE
, Tax_Lien_Balance__c &lt; 0 
)
,
        AND(
              Industry__r.Name = &apos;Construction&apos; 
             ,Business_Open_Date__c &gt; (today() - (30*120))
            )
      , 
   
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 1 /*Deepest Position*/  
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 2 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 60000 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0.3 /*Balance Net %*/
              )
          )

) 
, &quot;&quot; 
, IF(  ispickval(Decline_Reason__c,&quot;Qualified at Rapid&quot;) ,&quot;||OVERQUALIFIED||&quot;
, &quot;PRINCIPIS CAPITAL APPROVED&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Principis Capital</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_Monthly_Sales__c</fullName>
        <formula>Opportunity_Reference__r.QC_Gross_Monthly_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Received__c</fullName>
        <label>Quote Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RapidAdvance_Balance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RapidAdvance Balance?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RapidAdvance__c</fullName>
        <formula>IF( 
OR(

OR(
State_of_Operation__c = &apos;MT&apos;
, State_of_Operation__c = &apos;NV&apos;
, State_of_Operation__c = &apos;NJ&apos;
, State_of_Operation__c = &apos;RI&apos;
, State_of_Operation__c = &apos;SD&apos;
)

, FICO_Score__c &lt; 600
, Credit_Inquiries_Last_90_Days__c &gt; 50 
, QC_Monthly_Sales__c &lt; 5000
, Ave_Number_of_Deposits_per_Month__c &lt; 5 
, Average_Monthly_Negative_Balance__c &gt; 3 
, Business_Open_Date__c &gt; (today() - (30*24)) 
, Industry__r.RapidAdvance__c = TRUE
, ispickval(Entity_Type__c,&apos;Non-Profit&apos;) 

/*
, Soft_Pull_Only__c = TRUE 
*/

,
AND( 
Bankruptcy__c = TRUE
, OR( Bankruptcy_Discharge_Date__c &gt; (today()-(30*12))
     ,ISNULL(Bankruptcy_Discharge_Date__c)
    )
)
, 
AND( 
Tax_Liens__c = FALSE
, Tax_Lien_Balance__c &gt; 0 
) 
, 
AND( 
Tax_Liens__c = TRUE
, Tax_Lien_Balance__c &gt; 75000 
) 
, 
        AND(
              Industry__r.Name = &apos;Trucking&apos; 
            , Business_Open_Date__c &gt; (today() - (30*36))
        )
      ,

        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 1 /*Deepest Position*/
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 6 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 75000 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0.4 /*Balance Net %*/
              )
          )

) 
, &quot;&quot; 
, &quot;RAPIDADVANCE APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RapidAdvance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receivables_or_Unpaid_Invoices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receivables or Unpaid Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <description>For specific partner lists</description>
        <label>Recommendation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Short__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requested Short</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Submission__c</fullName>
        <label>Requested Submission</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RocketLoans__c</fullName>
        <formula>IF(
   OR(  
        FICO_Score__c &lt; 680
      , QC_Monthly_Sales__c &lt; 2000
      , MCA_Only__c = TRUE
)
, &quot;&quot;
, &quot;ROCKETLOANS APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RocketLoans</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPER_G__c</fullName>
        <formula>IF(
   OR(  /* uncomment if necessary
        State_of_Operation__c = &apos;WV&apos;
        */
        /* uncomment if necessary
        FICO_Score__c &lt; 500
        */
        /* uncomment if necessary
        Credit_Inquiries_Last_90_Days__c &gt; 20
        */
        QC_Monthly_Sales__c &lt; 600000
      , Ave_Number_of_Deposits_per_Month__c &lt; 5
      , Average_Monthly_Negative_Balance__c &gt; 4
      , Business_Open_Date__c &gt; (Today() - (30*12))
      , Bankruptcy_Discharge_Date__c &gt; (today()-(30*12))
      ,  Industry__r.Super_G__c = TRUE
      , Average_Balancce__c &lt; 0
        /* uncomment if necessary
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
        */
        /* uncomment if necessary
      , Soft_Pull_Only__c = TRUE
      , MCA_Only__c = TRUE
        */
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; 0
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            AND(
                 Position__c &gt;= Number_of_Competitor_Balances__c
               , Number_of_Competitor_Balances__c &gt;= 2 /*Deepest Position*/
              )
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 5 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &lt; 0 /*Max Payoff Amount*/
               , (Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, &quot;SUPER G APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SUPER G</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seek_Capital__c</fullName>
        <formula>IF(
   OR(  /* uncomment if necessary
        State_of_Operation__c = &apos;&apos;
        */
        FICO_Score__c &lt; 680
      , Credit_Inquiries_Last_90_Days__c &gt; 10
        /* uncomment if necessary
      , QC_Monthly_Sales__c &lt; 15000
        */
        /* uncomment if necessary
      , Ave_Number_of_Deposits_per_Month__c &lt; 3
        */
        /* uncomment if necessary
      , Average_Monthly_Negative_Balance__c &gt; 5
        */
        /*uncomment if necessary
      , Business_Open_Date__c &gt; (Today() - (30*24))
        */
      , Bankruptcy_Discharge_Date__c &gt; (today()-(1))
      ,  Industry__r.Seek__c = TRUE
         /* uncomment if necessary
      , Average_Balancce__c &lt; 0
        */
        /* uncomment if necessary
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
        */
        /* uncomment if necessary
      , Soft_Pull_Only__c = TRUE
        */
      , MCA_Only__c = TRUE
        /* uncomment if necessary
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &lt; 0
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )
        */
)
, &quot;&quot;
, &quot;SEEK CAPITAL APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seek Capital</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seek_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seek Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selection_Notes__c</fullName>
        <label>Selection Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Signed_Contract__c</fullName>
        <label>Signed Contract</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Smartbiz_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Smartbiz Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Smartbiz__c</fullName>
        <formula>IF(
   OR(  /* uncomment if necessary
        State_of_Operation__c = &apos;&apos;
        */
        FICO_Score__c &lt; 600
        /* uncomment if necessary
      , Credit_Inquiries_Last_90_Days__c &gt; 20
        */
      , QC_Monthly_Sales__c &lt; 15000
        /* uncomment if necessary
      , Ave_Number_of_Deposits_per_Month__c &lt; 3
        */
        /* uncomment if necessary
      , Average_Monthly_Negative_Balance__c &gt; 5
        */
      , Business_Open_Date__c &gt; (Today() - (30*24))
      , Bankruptcy_Discharge_Date__c &gt; (today()-(30*36))
        /* uncomment if necessary
      , Smartbiz_Industry__c = TRUE
        */
        /* uncomment if necessary
      , Average_Balancce__c &lt; 0
        */
        /* uncomment if necessary
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
        */
        /* uncomment if necessary
      , Soft_Pull_Only__c = TRUE
      , MCA_Only__c = TRUE
        */
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &lt; 0
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )
      ,
        AND(
              Industry__r.Name = &apos;Trucking&apos; 
            , Business_Open_Date__c &gt; (today() - (30*24))
        )
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            OR(
                 Position__c &gt;= Number_of_Competitor_Balances__c
               , Number_of_Competitor_Balances__c &gt;= 1 /*Deepest Position*/
              )
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 0 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 0 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0.0 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, &quot;SMARTBIZ APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Smartbiz</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_Advances__c</fullName>
        <formula>IF(
   OR( 
        /* uncomment if necessary
        State_of_Operation__c = &apos;CA&apos;
        */

        FICO_Score__c &lt; 530
/*
      , Credit_Inquiries_Last_90_Days__c &gt; 20
*/
      , QC_Monthly_Sales__c &lt; 10000
      , Ave_Number_of_Deposits_per_Month__c &lt; 5
      , Average_Monthly_Negative_Balance__c &gt; 2
      , Business_Open_Date__c &gt; (Today() - (30*3))
      , Industry__r.Snap_Advances__c = TRUE 
      , Average_Balancce__c &lt; 1500
      , Current_Bank_Balance__c &lt; 0
      , ispickval(Citizenship_Status__c,&apos;Visa&apos;) 
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
      , RapidAdvance_Balance__c = TRUE
      , Last_Funded_Date__c &gt; (Today() - (30*1))
/*
      , Soft_Pull_Only__c = TRUE
*/
      ,
       AND( 
            Bankruptcy__c = TRUE
           , OR( Bankruptcy_Discharge_Date__c &gt; (today()-(30*1200))
                ,ISNULL(Bankruptcy_Discharge_Date__c)
               )
           )
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; 0
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 300000
        )
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 1 /*Deepest Position*/
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 1 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 250000 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0.55 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, &quot;SNAP APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snap Advances</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Snap Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snap_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Snap Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snap_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Snap Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Soft_Pull_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Soft Pull Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_of_Operation__c</fullName>
        <formula>Opportunity_Reference__r.Billing_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State of Operation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NEW</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No Contact</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Waiting on Documents</fullName>
                </value>
                <value>
                    <fullName>Pre-Approved</fullName>
                </value>
                <value>
                    <fullName>Approved for Submission</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Quotes Received</fullName>
                </value>
                <value>
                    <fullName>Quote Sold</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Funded</fullName>
                </value>
                <value>
                    <fullName>Not Eligible</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
                <value>
                    <fullName>BOC Incomplete</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Sent to FundBox</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Application</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>In-Process</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Presented</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategic Disqualified</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>